platform/network/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: Default Cilium GatewayClass (LB-IPAM + L2 announcements)
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-config
    namespace: gateway
