platform/network/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.200
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: argocd.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: openbao-https
      hostname: bao.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: openbao-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: dex-https
      hostname: dex.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: dex-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: longhorn-https
      hostname: longhorn.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: cf2cnp-https
      hostname: cf2cnp.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cf2cnp-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: hubble-https
      hostname: hubble.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: grafana-https
      hostname: grafana.icaninto.space
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
